<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent"
        tools:context=".ui.activitys.ForgetPwdActivity">
    <com.example.kottlinbaselib.utils.CustomToolBar
            android:id="@+id/cus_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:back_src="@mipmap/icon_back"
            app:line_color="@color/havling"
            app:line_height="@dimen/dimen_5dp"
            app:right_title="@string/aff"
            app:right_title_color="@color/blue"
            app:title_text="@string/findpwd" />

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <TextView
                    style="@style/PingFangMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_20dp"
                    android:layout_marginTop="@dimen/dimen_30dp"
                    android:text="@string/placeinputphone"

                    android:textColor="@color/text_color"
                    android:textSize="@dimen/text_dimens14" />

            <EditText
                    android:id="@+id/et_phone"
                    style="@style/PingFangLight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_20dp"
                    android:layout_marginTop="@dimen/dimen_10dp"
                    android:layout_marginRight="@dimen/dimen_20dp"
                    android:hint="@string/placeinputphone"
                    android:digits="0123456789"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:paddingLeft="@dimen/dimen_5dp"
                    android:textSize="@dimen/text_dimens14"
                    android:theme="@style/MyEditText1" />

            <TextView
                    style="@style/PingFangMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_20dp"
                    android:layout_marginTop="@dimen/dimen_20dp"
                    android:text="@string/placeinputauthcode"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/text_dimens14" />

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <EditText
                        android:id="@+id/et_authcode"
                        style="@style/PingFangLight"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dimen_20dp"
                        android:layout_marginTop="@dimen/dimen_10dp"
                        android:layout_marginRight="@dimen/dimen_20dp"
                        android:hint="@string/placeinputauthcode"
                        android:maxLength="10"
                        android:maxLines="1"
                        android:paddingLeft="@dimen/dimen_5dp"
                        android:textSize="@dimen/text_dimens14"
                        android:theme="@style/MyEditText1" />

                <TextView
                        android:id="@+id/tv_auth"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="@dimen/dimen_20dp"
                        android:padding="@dimen/dimen_5dp"
                        android:text="@string/getauthcode"
                        android:textColor="@drawable/select_authcode_pross_color"
                        android:textSize="@dimen/text_dimens14" />
            </RelativeLayout>

            <TextView
                    style="@style/PingFangMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_20dp"
                    android:layout_marginTop="@dimen/dimen_20dp"
                    android:text="@string/placeinputnewpwd"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/text_dimens14" />

            <EditText
                    android:id="@+id/et_newpwd"
                    style="@style/PingFangLight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_20dp"
                    android:layout_marginTop="@dimen/dimen_10dp"
                    android:layout_marginRight="@dimen/dimen_20dp"
                    android:hint="@string/placeinputnewpwd"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingLeft="@dimen/dimen_5dp"
                    android:textSize="@dimen/text_dimens14"
                    android:theme="@style/MyEditText1" />

            <TextView
                    style="@style/PingFangMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_20dp"
                    android:layout_marginTop="@dimen/dimen_20dp"
                    android:text="@string/placeinpuaffdpwd"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/text_dimens14" />

            <EditText
                    android:id="@+id/et_affpwd"
                    style="@style/PingFangLight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_20dp"
                    android:layout_marginTop="@dimen/dimen_10dp"
                    android:layout_marginRight="@dimen/dimen_20dp"
                    android:hint="@string/placeinputnewpwd"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingLeft="@dimen/dimen_5dp"
                    android:textSize="@dimen/text_dimens14"
                    android:theme="@style/MyEditText1" />
        </LinearLayout>

    </ScrollView>
</LinearLayout>