<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.activitys.ChangePwdActivity">
    <com.example.kottlinbaselib.utils.CustomToolBar
            android:id="@+id/cus_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:back_src="@mipmap/icon_back"
            app:title_text="@string/title_forgetpwd"
            app:right_title="@string/aff"
            app:line_color="@color/havling"
            app:line_height="@dimen/dimen_5dp"
            app:right_title_color="@color/blue" />
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_20dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_color"
                    android:layout_marginTop="@dimen/dimen_30dp"
                    style="@style/PingFangMedium"
                    android:textSize="@dimen/text_dimens14"
                    android:text="@string/placeinputoldpwd"
            />
            <EditText
                    android:id="@+id/et_oldpwd"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textSize="@dimen/text_dimens14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/dimen_5dp"
                    android:theme="@style/MyEditText1"
                    android:layout_marginTop="@dimen/dimen_10dp"
                    android:hint="@string/placeinputoldpwd"
                    android:layout_marginLeft="@dimen/dimen_20dp"
                    android:layout_marginRight="@dimen/dimen_20dp"
            />
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_20dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_color"
                    android:layout_marginTop="@dimen/dimen_20dp"
                    style="@style/PingFangMedium"
                    android:textSize="@dimen/text_dimens14"
                    android:text="@string/placeinputnewpwd"
            />
            <EditText
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:id="@+id/et_newpwd"
                    android:textSize="@dimen/text_dimens14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/dimen_5dp"
                    android:theme="@style/MyEditText1"
                    android:layout_marginTop="@dimen/dimen_10dp"
                    android:hint="@string/placeinputnewpwd"
                    android:layout_marginLeft="@dimen/dimen_20dp"
                    android:layout_marginRight="@dimen/dimen_20dp"
            />
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_20dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_color"
                    android:layout_marginTop="@dimen/dimen_20dp"
                    style="@style/PingFangMedium"
                    android:textSize="@dimen/text_dimens14"
                    android:text="@string/placeinpuaffdpwd"
            />
            <EditText
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:id="@+id/et_affpwd"
                    android:textSize="@dimen/text_dimens14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/dimen_5dp"
                    android:theme="@style/MyEditText1"
                    android:layout_marginTop="@dimen/dimen_10dp"
                    android:hint="@string/placeinpuaffdpwd"
                    android:layout_marginLeft="@dimen/dimen_20dp"
                    android:layout_marginRight="@dimen/dimen_20dp"
            />
        </LinearLayout>
    </ScrollView>
</LinearLayout>