<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/shape_apptheme_color"
        tools:context=".ui.activitys.LoginActivity">
    <ImageView
            android:layout_width="@dimen/dimen_80dp"
            android:layout_height="@dimen/dimen_80dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dimen_100dp"
            android:src="@mipmap/logo"
    />
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginRight="@dimen/dimen_30dp"
                android:paddingLeft="@dimen/dimen_30dp">


            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintAnimationEnabled="false"
                    android:textColorHint="@color/white"
                    app:hintTextAppearance="@style/hintAppearance"
                    android:layout_marginTop="@dimen/dimen_56dp">

                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:id="@+id/et_phone"
                        android:layout_height="wrap_content"
                        android:hint="@string/phonenumber"
                        android:inputType="phone"
                        android:maxLines="1"
                        android:digits="0123456789"
                        android:theme="@style/MyEditText"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:textSize="@dimen/text_dimens12"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintAnimationEnabled="false"
                    android:textColorHint="@color/white"

                    app:hintTextAppearance="@style/hintAppearance"
                    android:layout_marginTop="@dimen/dimen_30dp">

                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:id="@+id/et_password"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:theme="@style/MyEditText"
                        app:hintTextAppearance="@style/hintAppearance"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:textSize="@dimen/text_dimens12"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_40dp"
                    android:text="登录"
                    android:layout_marginTop="@dimen/dimen_22dp"

                    android:background="@drawable/shape_apphometab_bg_coloe"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_dimens14"
            />
            <RelativeLayout android:layout_width="match_parent"
                            android:orientation="horizontal"
                            android:layout_marginTop="@dimen/text_dimens10"
                            android:layout_height="wrap_content">

                <TextView
                        android:id="@+id/tv_forgetpwd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/forgetpwd"
                        style="@style/PingFangRegular"
                        android:paddingTop="@dimen/dimen_10dp"
                        android:paddingBottom="@dimen/dimen_10dp"
                        android:textColor="@color/white"
                />
                <TextView
                        android:id="@+id/tv_register"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/register"
                        android:layout_alignParentRight="true"
                        style="@style/PingFangRegular"
                        android:paddingLeft="@dimen/text_dimens10"
                        android:paddingTop="@dimen/dimen_10dp"
                        android:paddingBottom="@dimen/dimen_10dp"
                        android:textColor="@color/white"
                />

            </RelativeLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>